--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@
 body {
   background: linear-gradient(to right, #f857a6, #ff5858);
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  box-sizing: border-box; }
 
 .todo__container {
   background: #fff;
-  width: 40%;
+  max-width: 500px;
+  width: 60%;
   margin: 100px auto;
   padding: 20px;
   display: flex;
@@ -45,27 +47,35 @@ input, .submit__btn {
   justify-content: center;
   flex-direction: column; }
   .todoList__form .delete__btn {
-    float: right;
     color: black;
     text-decoration: none;
-    margin-top: 16px;
-    margin-right: 10px; }
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%); }
     .todoList__form .delete__btn:hover {
       cursor: pointer; }
 
 .todo__item {
-  margin: 10px 0; }
+  margin: 20px 0;
+  box-sizing: border-box;
+  position: relative; }
   .todo__item--text {
     margin-left: 20px; }
 
 .complete__btn {
   border: 1px solid #ff69b4;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   color: #ff69b4;
-  font-size: 16px; }
+  font-size: 16px;
+  margin-right: 15px; }
   .complete__btn:hover {
     cursor: pointer; }
 
 .completed {
   text-decoration: line-through; }
+
+@media only screen and (max-width: 898px) {
+  .todo__container {
+    width: 80%; } }
