--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,11 +15,13 @@ body {
   background: $background-color;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
+  box-sizing: border-box;
 }
 
 .todo__container {
   background: #fff;
-  width: 40%;
+  max-width: 500px;
+  width: 60%;
   margin: 100px auto;
   padding: 20px;
   display: flex;
@@ -68,11 +70,13 @@ input, .submit__btn {
   
 
   & .delete__btn {
-    float: right;
     color: black;
     text-decoration: none;
-    margin-top: 16px;
-    margin-right: 10px;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    
 
     &:hover {
       cursor: pointer;
@@ -81,7 +85,9 @@ input, .submit__btn {
 }
 
 .todo__item {
-  margin: 10px 0;
+  margin: 20px 0;
+  box-sizing: border-box;
+  position: relative;
 
 
   &--text {
@@ -92,10 +98,11 @@ input, .submit__btn {
 
 .complete__btn {
   border: 1px solid $color-2;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   color: $color-2;
   font-size: 16px;
+  margin-right: 15px; 
 
   &:hover {
     cursor: pointer;
@@ -104,4 +111,10 @@ input, .submit__btn {
 
 .completed {
   text-decoration: line-through;
+}
+
+@media only screen and (max-width: 898px) {
+  .todo__container {
+    width: 80%;
+  }
 }
